# cpu_raytracer_oop_sem2_tuhh

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  eval.md  getGLFW.cmake  getGLM.cmake  getImGui.cmake  getNativeFileDialog.cmake  getYAML-cpp.cmake  imgui.ini
ProjectionMatrixVisualisation/: ProjectionMatrixVisualisation.pde  README.md
doc/: Doxyfile.in  build.md  class_diagram.md  examples.md  final_report.md  preleminary_conception_design.md  preliminary_conception_design.md  scene_serialization_spec.md
include/: application.h  color_palette.h  event_stream.h  file_dialog.h  frame_buffer.h  gl_error.h  material.h  pixel_logger.h  profiler.h  render_dispatcher.h  render_params.h  render_thread.h  renderer.h  resource_container.h  resource_loaders.h  resources.h  rt_imgui.h  rt_renderer.h  rtmath.h  scene.h  shader.h  stream_formatter.h  thread_pool.h  voxel_grid.h  window.h  window_thread.h
include/scene/: camera.h  material.h  sampler.h  scene.h  scene_deserializer.h  scene_lights.h  scene_object.h  scene_serializer.h  scene_shapes.h  transform.h
resource/scenes/: 01_sphere.yaml  02_castle.yaml  02_knight.yaml  04_textures.yaml  05_environment.yaml  example1.yaml
resource/shader/: shader.frag  shader.vert
src/: application.cpp  camera.cpp  file_dialog.cpp  frame_buffer.cpp  gl_error.cpp  main.cpp  material.cpp  pixel_logger.cpp  profiler.cpp  render_dispatcher.cpp  render_thread.cpp  renderer.cpp  resource_container.cpp  resource_loaders.cpp  rt_renderer.cpp  rtmath.cpp  sampler.cpp  scene.cpp  scene_deserializer.cpp  scene_lights.cpp  scene_object.cpp  scene_serializer.cpp  scene_shapes.cpp  shader.cpp  transform.cpp  window.cpp  window_thread.cpp
